--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:Dkh3BAVtALl2kqLNDbZsH+cdhqgIf3q7CQhptlMg/yg=
 APP_DEBUG=true
+APP_LOG = single
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
@@ -15,18 +16,20 @@ DB_PASSWORD=lys289158325
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+QUEUE_DRIVER= database
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.163.com
+MAIL_PORT=465
+MAIL_USERNAME=yancy_dev_mail@163.com
+MAIL_PASSWORD=lys249981062
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS = yancy_dev_mail@163.com
+MAIL_FROM_NAME = Yancy
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
