--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ DB_USERNAME=laravel
 DB_PASSWORD=ritN28d87s
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER = file
+CACHE_DRIVER = array
 SESSION_DRIVER=file
 QUEUE_DRIVER= database
 
